# chd-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  README.md
chd-rs/: Cargo.toml
chd-rs-capi/: Cargo.toml  build.rs  cbindgen.toml  chd.h  chdcorefile_wrapper.h
chd-rs-capi/libchdcorefile/: CMakeLists.txt  chdcorefile.c  chdcorefile.h
chd-rs-capi/src/: chdcorefile.rs  chdcorefile_sys.rs  header.rs  lib.rs
chd-rs/benches/: bench.rs
chd-rs/fuzz/: Cargo.toml
chd-rs/fuzz/fuzz_targets/: chd_file_read.rs
chd-rs/src/: block_hash.rs  cdrom.rs  chd.rs  chdfile.rs  error.rs  flac_header.rs  header.rs  huffman.rs  iter.rs  lib.rs  map.rs  metadata.rs  read.rs  rel_range.rs
chd-rs/src/compression/: avhuff.rs  cdrom.rs  ecc.rs  flac.rs  flac_header.rs  huff.rs  io.rs  lzma.rs  mod.rs  none.rs  rel_range.rs  zlib.rs  zstd.rs
pgo/: rchdman_x86_64_msvc_chd_v5.profraw
rchdman/: Cargo.toml
rchdman/src/: main.rs
src/: cdrom.rs  header.rs  huffman.rs  lib.rs  metadata.rs
src/compression/: mod.rs
