[package]
name = "chd"
version = "0.0.1"
authors = ["Ronny Chan <ronny@ronnychan.ca>"]
edition = "2018"
description = "Rust implementation of the CHD File Format"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
num-traits = "0.2"
num-derive = "0.3"
regex = "1"
lazy_static = "1.4.0"