[package]
name = "chd-capi"
version = "0.3.1"
edition = "2021"
authors = ["Ronny Chan <ronny@ronnychan.ca>"]
description = "libchdr-compatible C API for a Rust implementation of the CHD File Format"
license = "BSD-3-Clause"
repository = "https://github.com/SnowflakePowered/chd-rs"
readme = "README.md"
categories = ["emulators", "compression", "encoding"]
keywords = ["mame", "chd", "decompression"]

[lib]
crate-type = ["staticlib"]

[features]
default = []
chd_core_file = ["bindgen", "cmake"]
chd_virtio = ["chd_core_file"]
chd_precache = []
verify_block_crc = ["chd/verify_block_crc"]

[dependencies]
chd = { version = "0.3", git = "https://github.com/SnowflakePowered/chd-rs" }

[build-dependencies]
cbindgen = "0.26.0"
bindgen = { version = "0.71.1", optional = true }
cmake = { version =  "0.1.48", optional = true }


[package.metadata.docs.rs]
features = ["default", "chd_core_file", "chd_virtio", "chd_precache"]
rustdoc-args = ["--cfg", "docsrs"]
