[package]
name = "chd"
version = "0.1.8"
authors = ["Ronny Chan <ronny@ronnychan.ca>"]
edition = "2021"
description = "Rust implementation of the CHD File Format"
license = "BSD-3-Clause"
repository = "https://github.com/SnowflakePowered/chd-rs"
readme = "../README.md"
categories = ["emulators", "compression", "encoding"]
keywords = ["mame", "chd", "decompression"]

[features]
default = ["want_subcode", "want_raw_data_sector"]

# disabled by default for speed
verify_block_crc = ["want_subcode", "want_raw_data_sector"]

huffman_api = []
codec_api = []
unstable_lending_iterators = [ "lending-iterator", "nougat" ]
fast_zlib = ["flate2/zlib-ng"]

# if disabled results may be unwanted
want_subcode = []
want_raw_data_sector = []

[dependencies]
byteorder = "1"
num-traits = "0.2"
num-derive = "0.3"
crc = "3"
arrayvec = "0.7.2"
text_io = "0.1"

# codecs
flate2 = "1"
lzma-rs = { package = "lzma-rs-headerless", version = "0.5.3", features = ["raw_decoder"] }
claxon = "0.4"
bitreader = "0.3.6"

# lending-iterator
lending-iterator = { version = "0.1", optional = true }
nougat = { version = "0.2", optional = true }

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
features = ["default", "codec_api", "huffman_api", "unstable_lending_iterators"]
rustdoc-args = ["--cfg", "docsrs"]