[package]
name = "rchdman"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chd = { path = "../chd-rs", features = ["unstable_lending_iterators", "fast_zlib"]}
clap = { version = "3", features = ["derive"] }
anyhow = "1"
thousands = "0.2.0"
hex = "0.4"
num-traits = "0.2"
sha1 = "0.10.1"
